--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "C:/Users/USER/Downloads/routWhite-master/routWhite-master/linux"
+    "cmake.sourceDirectory": "D:/proyecto del grupo/rutasapp/linux"
 }
