--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_map: ^6.0.0
+  latlong2: ^0.9.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_maps_flutter: ^2.5.3
   flutter_polyline_points: ^2.0.0
   geolocator: ^11.0.0
   flutter_animate: ^4.5.0
-  latlong2: ^0.9.0
   provider: ^6.1.1
   lottie: ^3.1.0
   flutter_vector_icons: ^2.0.0
