cambios del buscador de rutas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "cmake.sourceDirectory": "D:/proyecto del grupo/rutasapp/linux"
+    "cmake.sourceDirectory": "D:/proyecto del grupo/rutasapp/linux",
+    "CodeGPT.apiKey": "Anthropic",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
