driver y pqr listos

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,13 @@
-org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Workaround: evitar fallo de caches incrementales de Kotlin en Windows/rutas con espacios
+kotlin.incremental=false
+kotlin.incremental.useClasspathSnapshot=false
+kotlin.caching.enabled=false
+kotlin.daemon.useFallbackStrategy=false
+kotlin.compiler.execution.strategy=in-process
+
+# Evita caches de Gradle que pueden quedar corruptas
+org.gradle.caching=false
