--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # UI and Icons
   cupertino_icons: ^1.0.8
   flutter_vector_icons: ^2.0.0
-  lottie: ^3.3.2
+  lottie: ^3.3.1
   flutter_animate: ^4.5.2
 
   # Maps and Location
@@ -62,6 +62,7 @@ dependencies:
   # Voice and Audio
   flutter_tts: ^4.2.3
   permission_handler: ^12.0.1
+  file_picker: ^8.0.3
 
   # Development and Debugging
   logger: ^2.0.2
@@ -72,7 +73,6 @@ dev_dependencies:
 
   # Linting and Code Quality
   flutter_lints: ^6.0.0
-  very_good_analysis: ^10.0.0
 
   # Testing
   mockito: ^5.4.4
