--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,9 @@ dependencies:
   # WebView for HTML integration
   webview_flutter: ^4.10.0
 
+  # Firebase
+  firebase_core: ^3.6.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
