--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: "none"
 version: 1.0.1+2
 
 environment:
-  sdk: ">=3.2.3 <4.0.0"
+  sdk: ">=3.6.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -38,6 +38,8 @@ dependencies:
   # Utilities
   dartz: ^0.10.1
   intl: ^0.20.2
+  url_launcher: ^6.3.1
+  package_info_plus: ^8.0.3
 
   # Voice and Audio
   flutter_tts: ^4.2.3
@@ -75,4 +77,3 @@ flutter:
 
   assets:
     - assets/animaciones/bus.json
-
