--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -3,7 +3,6 @@ name: Build and Release APK
 on:
   push:
     branches: [main]
-    tags: ["v*"]
   workflow_dispatch:
 
 jobs:
@@ -28,9 +27,6 @@ jobs:
 
       - name: Get dependencies
         run: flutter pub get
-
-      - name: Run tests
-        run: flutter test
 
       - name: Decode keystore
         run: |
@@ -61,79 +57,29 @@ jobs:
 
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ steps.version.outputs.tag }}
-          release_name: RouWhite v${{ steps.version.outputs.version }}
+          name: RouWhite v${{ steps.version.outputs.version }}
           body: |
-            ## RouWhite v${{ steps.version.outputs.version }}
+            ## 📱 RouWhite v${{ steps.version.outputs.version }}
 
-            ### 📱 Descarga la aplicación
+            ### 🔗 Descarga Rápida
+            **Escanea el QR:** https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/
 
-            **Instalación:**
-            1. Descarga el archivo APK
-            2. Habilita "Fuentes desconocidas" en tu dispositivo Android
+            ### 📋 Instalación
+            1. Descarga el APK desde abajo
+            2. Habilita "Fuentes desconocidas" en Android
             3. Instala la aplicación
 
-            **Página de descarga con QR:** https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/
+            ### 🚀 Cambios
+            - Actualización automática desde commit
+            - Mejoras en estabilidad
+            - Correcciones de errores
 
-            ### 🚀 Cambios en esta versión
-            - Corrección de errores de compilación
-            - Mejoras en la estabilidad
-            - Actualización de dependencias
-
-            ### 📋 Información técnica
-            - **Versión:** ${{ steps.version.outputs.version }}
-            - **Build:** ${{ steps.version.outputs.build_number }}
-            - **Fecha:** $(date +'%Y-%m-%d %H:%M:%S')
-
+            **Versión:** ${{ steps.version.outputs.version }} | **Build:** ${{ steps.version.outputs.build_number }}
+          files: build/app/outputs/flutter-apk/rouwhite-v${{ steps.version.outputs.version }}.apk
           draft: false
           prerelease: false
-
-      - name: Upload APK to Release
-        uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/app/outputs/flutter-apk/rouwhite-v${{ steps.version.outputs.version }}.apk
-          asset_name: rouwhite-v${{ steps.version.outputs.version }}.apk
-          asset_content_type: application/vnd.android.package-archive
-
-      - name: Upload APK as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: rouwhite-apk
-          path: build/app/outputs/flutter-apk/rouwhite-v${{ steps.version.outputs.version }}.apk
-
-  # Opcional: Deploy a Firebase App Distribution
-  firebase-distribution:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download APK artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: rouwhite-apk
-          path: ./
-
-      - name: Setup Firebase CLI
-        uses: w9jds/firebase-action@master
-        with:
-          args: --version
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-
-      - name: Distribute to Firebase App Distribution
-        uses: w9jds/firebase-action@master
-        with:
-          args: appdistribution:distribute *.apk --app ${{ secrets.FIREBASE_APP_ID }} --groups "testers" --release-notes "Automated build from GitHub Actions"
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
