--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -83,3 +83,19 @@ jobs:
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    # Firebase App Distribution (opcional)
+    - name: Upload to Firebase App Distribution
+      if: ${{ secrets.FIREBASE_TOKEN != '' }}
+      uses: wzieba/Firebase-Distribution-Github-Action@v1
+      with:
+        appId: ${{ secrets.FIREBASE_APP_ID }}
+        serviceCredentialsFileContent: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+        groups: testers
+        file: build/app/outputs/flutter-apk/rouwhite-v${{ steps.version.outputs.version }}.apk
+        releaseNotes: |
+          🚀 Nueva versión v${{ steps.version.outputs.version }}
+          
+          Actualización automática desde GitHub Actions
+          - Mejoras en estabilidad
+          - Correcciones de errores
+          - Sistema de distribución mejorado
