Solución moderna de conectividad - Reemplazo de connectivity_plus
 Resuelto error de build de connectivity_plus
 Implementadas tecnologías modernas y estables:
  - internet_connection_checker_plus: Verificación de conectividad mejorada
  - network_info_plus: Información detallada de red y WiFi
  - ConnectivityService: Servicio personalizado moderno
  - ConnectivityMixin: Mixin para facilitar uso en widgets

 Nuevos archivos:
  - lib/core/services/connectivity_service.dart
  - lib/core/mixins/connectivity_mixin.dart
  - example/connectivity_service_example.dart
  - SOLUCION_CONECTIVIDAD_MODERNA.md

 Beneficios:
  - Build exitoso sin errores de Gradle
  - Información detallada de conexión WiFi
  - Mejor UX con indicadores visuales
  - Compatible con versiones futuras
  - No afecta funcionalidad existente

 Verificado: flutter build apk --debug exitoso

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
 
   # Network and API
   dio: ^5.9.0
-  connectivity_plus: ^7.0.0
+  internet_connection_checker_plus: ^2.0.6
+  network_info_plus: ^5.0.0
   geocoding: ^4.0.0
 
   # Utilities
@@ -81,5 +82,3 @@ dependency_overrides:
   geolocator_android: 5.0.1
   # Override flutter_map to use exact compatible version
   flutter_map: 8.1.0
-  # Override connectivity_plus to use stable version
-  connectivity_plus: 7.0.0
