--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
 
   # Network and API
   dio: ^5.9.0
-  internet_connection_checker_plus: ^2.0.6
+  internet_connection_checker: ^1.0.0+1
   network_info_plus: ^5.0.0
   geocoding: ^4.0.0
 
