Fix: Corregir errores de compilación
- Actualizar compileSdk y targetSdk a 36 para compatibilidad con plugins
- Actualizar NDK version a 27.0.12077973
- Configurar dependency overrides para resolver conflictos:
  - geolocator_android: 5.0.1
  - flutter_map: 8.1.0
  - latlong2: 0.9.1
- Agregar spec de corrección de errores de compilación
- APK debug y release ahora compilan exitosamente

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,6 @@ dev_dependencies:
   json_annotation: ^4.8.1
   json_serializable: ^6.7.1
 
-
 flutter:
   uses-material-design: true
 
@@ -78,7 +77,7 @@ flutter:
 
 # Dependency overrides to resolve version conflicts
 dependency_overrides:
-  # Override geolocator_android to use a compatible version
+  # Use latest compatible versions
   geolocator_android: 5.0.1
-  # Override flutter_map to use exact compatible version
   flutter_map: 8.1.0
+  latlong2: 0.9.1
