feat: Implementar sistema de distribución simple con QR
 Características nuevas:
- GitHub Actions para build automático de APK
- Creación automática de GitHub Releases
- Página web de distribución con QR code dinámico
- Sistema de versionado automático
- Interfaz responsive y moderna

 Archivos agregados:
- .github/workflows/build-and-release.yml (CI/CD)
- docs/index.html (página de distribución)
- docs/style.css (estilos modernos)
- docs/script.js (funcionalidad QR)
- README.md actualizado
- Specs completos de la implementación

 Próximos pasos:
1. Configurar secrets en GitHub
2. Habilitar GitHub Pages
3. Primer release automático

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+# Secrets and sensitive files
+SETUP-SECRETS.md
+android/key.jks.base64
+android/key.properties
+
+# GitHub Pages generated files
+docs/latest-*.txt
