TECH: Implementar tecnologías avanzadas para CI/CD robusto
 Nuevas Tecnologías Implementadas:

1.  **Docker-based CI/CD**
   - Container cirrusci/flutter:3.24.3 para entorno consistente
   - Instalación automática de Android SDK optimizada
   - Configuración avanzada de herramientas de desarrollo

2.  **Gradle Build Optimization**
   - SDK 34 para mejor compatibilidad en CI
   - NDK 25.1.8937393 más estable
   - Java 11 para mejor rendimiento
   - Configuraciones de memoria optimizadas (4GB heap)
   - Exclusión de recursos conflictivos

3.  **Advanced Dependency Management**
   - Versiones estables específicas para CI (flutter_map 6.1.0, geolocator 9.0.2)
   - Dependency overrides optimizados para entornos CI
   - Cache inteligente de dependencias
   - Repair automático de pub cache

4.  **Multi-Strategy Build System**
   - Script ci_build.sh con 3 estrategias de fallback
   - Análisis de código pre-build
   - Builds condicionales por plataforma
   - Retry logic para dependencias

5.  **Health Check & Monitoring**
   - Verificación avanzada de APK (tamaño, estructura)
   - Monitoreo de proceso de build
   - Logs detallados para debugging
   - Validación de dependencias críticas

6.  **Gradle Properties Optimization**
   - Configuración de memoria y paralelización
   - Cache habilitado para builds más rápidos
   - Optimizaciones específicas para Android y Kotlin

 Objetivo: Resolver problemas de geolocator_android y builds fallidos
 Estrategia: Múltiples fallbacks y entorno containerizado robusto

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,13 +1,22 @@
-org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+# Advanced Gradle Configuration for CI/CD
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.daemon=false
+org.gradle.configureondemand=false
+
+# Android Build Optimizations
 android.useAndroidX=true
 android.enableJetifier=true
+android.enableR8.fullMode=false
+android.enableBuildCache=true
 
-# Modern Kotlin configuration
+# Flutter Optimizations
+flutter.compilationTraceEnabled=false
+flutter.trackWidgetCreation=false
+flutter.enableMirrors=false
+
+# Memory and Performance
 kotlin.incremental=true
-kotlin.incremental.useClasspathSnapshot=true
+kotlin.incremental.android=true
 kotlin.caching.enabled=true
-
-# Enable Gradle caching for better performance
-org.gradle.caching=true
-org.gradle.parallel=true
-org.gradle.configureondemand=true
