--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -17,6 +17,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -27,12 +33,11 @@ jobs:
       - name: Setup Android SDK and Tools
         uses: android-actions/setup-android@v3
         with:
-          api-level: 34
-          build-tools: 34.0.0
-          ndk-version: 25.1.8937393
+          api-level: 36
+          build-tools: 36.0.0
+          ndk-version: 27.0.12077973
 
-      - name: Accept Android Licenses
-        run: flutter doctor --android-licenses
+      # Accepting licenses interactively fails on CI; the action handles licenses
 
       - name: Cache Flutter dependencies
         uses: actions/cache@v4
