--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,11 @@ dependencies:
   lottie: ^3.2.0
   flutter_animate: ^4.5.2
 
-  # Maps and Location - Stable CI/CD versions
-  flutter_map: ^8.1.0 # Versión más reciente sin problemas de const
-  latlong2: ^0.9.1 # Compatible con flutter_map 8.x
-  flutter_polyline_points: ^2.0.0 # Versión más estable
-  geolocator: 9.0.2 # Versión estable sin problemas de CI
+  # Maps and Location - Fixed stable versions for CI/CD
+  flutter_map: 8.1.0 # Versión fija sin problemas de const
+  latlong2: 0.9.1 # Compatible con flutter_map 8.1.0
+  flutter_polyline_points: 2.0.0 # Versión fija más estable
+  geolocator: 9.0.2 # Versión fija estable sin problemas de CI
 
   # State Management
   provider: ^6.1.5
@@ -75,11 +75,14 @@ flutter:
   assets:
     - assets/animaciones/bus.json
 
-# Dependency overrides for CI/CD stability
+# Dependency overrides for CI/CD stability - Fixed versions
 dependency_overrides:
   # Stable versions that work in CI environments
   geolocator_android: 4.4.0 # Versión más estable para CI
-  flutter_map: ^8.1.0
-  latlong2: ^0.9.1
-  geolocator: 9.0.2
-  geolocator_platform_interface: 4.0.6
+  geolocator_platform_interface: 4.0.6 # Compatible con geolocator 9.0.2
+  flutter_map: 8.1.0 # Versión fija
+  latlong2: 0.9.1 # Versión fija compatible
+  geolocator: 9.0.2 # Versión fija
+  # Agregar overrides adicionales para resolver conflictos
+  geolocator_web: 2.1.6 # Compatible con geolocator 9.0.2
+  geolocator_windows: 0.1.1 # Compatible con geolocator 9.0.2
