Crear workflow simplificado para resolver errores
- Nuevo workflow simple-build.yml más robusto
- Deshabilitar workflow complejo que causaba errores
- Enfoque minimalista: solo lo esencial para compilar APK
- Timeout de 30 minutos para evitar cuelgues
- Pasos básicos: checkout, setup, build, release

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -1,8 +1,6 @@
-name: Build and Release APK
+name: Build and Release APK (DISABLED)
 
 on:
-  push:
-    branches: [main]
   workflow_dispatch:
 
 permissions:
